Fix vertical scrollbar in example

--- a/examples/donut-3d-example.css
+++ b/examples/donut-3d-example.css
@@ -1,6 +1,5 @@
 html {
     height: 100%;
-    overflow: hidden;
     width: 100%;
 }
 
@@ -13,4 +12,8 @@ body {
 div#chart-root {
     height: 100%;
     width: 100%;
+}
+
+x3d > canvas {
+    display: block;
 }
